--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js"
+    ></script>
   </head>
   <body>
     <header>
@@ -19,7 +23,6 @@
           <img src="" alt="" />
         </div>
         <div id="banner-b">
-          ¨
           <img src="" alt="" />
         </div>
         <div id="banner-c">
@@ -27,16 +30,49 @@
         </div>
       </section>
 
-      <section id="product-section"></section>
+      <section id="special-products-section">
+        <div id="limited-products-text-container">
+          <h2>Begrenset Opplag</h2>
+        </div>
+        <div id="chosen-products-text-container">
+          <h2>Utvalgt Storfe</h2>
+        </div>
+
+        <div id="limited-products-container">
+          <!-- Generate content from products module -->
+        </div>
+
+        <div id="chosen-products-container">
+          <!-- Generate content from products module -->
+        </div>
+      </section>
 
       <section id="ad-section"></section>
+
+      <section id="products-section">
+        <div id="all-products-text-container">
+          <h2>Alle Varer</h2>
+        </div>
+
+        <div id="products-container">
+          <!-- Generate content from products module -->
+        </div>
+      </section>
     </main>
 
     <footer>
-      <section id="website-info"></section>
-      <section id="contact-info"></section>
-      <section id="popular-info"></section>
-      <section id="follow-info"></section>
+      <section id="website-info">
+        <h3>SloppyMeat.no</h3>
+      </section>
+      <section id="contact-info">
+        <h3>Kontakt oss</h3>
+      </section>
+      <section id="popular-info">
+        <h3>Populære temaer</h3>
+      </section>
+      <section id="follow-info">
+        <h3>Følg oss</h3>
+      </section>
     </footer>
   </body>
 </html>
