--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -26,14 +26,10 @@
       <!-- Website top bar -->
       <div id="top-bar">
         <h1><a href="index.html">Sloppy Meat</a></h1>
-
-        <!-- Shopping cart button -->
-        <a href="shopping-cart.html" id="shopping-cart" class="header-button">
+        <button id="shopping-cart-button" class="button-nostyle">
           <i class="fa-solid fa-cart-shopping"></i>
-        </a>
-
-        <!-- Search button -->
-        <button class="header-button">
+        </button>
+        <button id="search-button" class="button-nostyle">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </div>
@@ -86,42 +82,15 @@
     <footer>
       <section id="website-info">
         <h3>SloppyMeat.no</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Om SloppyMeat</li>
-          <li>Cookies</li>
-          <li>Personvernerklæring</li>
-        </ul>
       </section>
-
       <section id="contact-info">
         <h3>Kontakt oss</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Finn butikk</li>
-          <li>Kontaktskjema</li>
-          <li>Kundeservice</li>
-        </ul>
       </section>
-
       <section id="popular-info">
         <h3>Populære temaer</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Oppskrifter</li>
-          <li>Matbloggen</li>
-          <li>Keto guide</li>
-        </ul>
       </section>
-
       <section id="follow-info">
         <h3>Følg oss</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Facebook</li>
-          <li>Twitter</li>
-          <li>Instagram</li>
-        </ul>
       </section>
     </footer>
   </body>
