--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <!-- Website top bar -->
-      <div id="top-bar">
+      <nav id="top-bar">
         <h1><a href="index.html">Sloppy Meat</a></h1>
 
         <!-- Shopping cart button -->
@@ -36,7 +36,7 @@
         <button class="header-button">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
-      </div>
+      </nav>
     </header>
 
     <main>
@@ -54,12 +54,9 @@
       </section>
 
       <section id="special-products-section">
-        <div id="limited-products-text-container">
-          <h2>Begrenset Opplag</h2>
-        </div>
-        <div id="chosen-products-text-container">
-          <h2>Utvalgt Storfe</h2>
-        </div>
+        <h2>Begrenset Opplag</h2>
+
+        <h2>Utvalgt Storfe</h2>
 
         <div id="limited-products-container">
           <!-- Generate content from products module -->
@@ -73,9 +70,7 @@
       <section id="ad-section"></section>
 
       <section id="products-section">
-        <div id="all-products-text-container">
-          <h2>Alle Varer</h2>
-        </div>
+        <h2>Alle Varer</h2>
 
         <div id="products-container">
           <!-- Generate content from products module -->
