--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -27,7 +27,7 @@
       <div id="top-bar">
         <h1><a href="index.html">Sloppy Meat</a></h1>
         <button id="shopping-cart-button" class="button-nostyle">
-          <i class="fa-solid fa-cart-shopping"></i>
+          <i class="fa-solid fa-cart-shopping"><a href=""></a></i>
         </button>
         <button id="search-button" class="button-nostyle">
           <i class="fa-solid fa-magnifying-glass"></i>
