--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -40,30 +40,27 @@
     </header>
 
     <main>
-      <!-- Top Banner, horizontal placement -->
-      <section id="banner-section">
-        <div id="banner-a">
-          <img src="" alt="" />
-        </div>
-        <div id="banner-b">
-          <img src="" alt="" />
-        </div>
-        <div id="banner-c">
-          <img src="" alt="" />
-        </div>
+      <!-- Top Banners-->
+      <section class="banner-section">
+        <img class="banner-section__banner" src="" alt="" />
+        <img class="banner-section__banner" src="" alt="" />
+        <img class="banner-section__banner" src="" alt="" />
       </section>
 
-      <section id="special-products-section">
-        <h2>Begrenset Opplag</h2>
-
-        <h2>Utvalgt Storfe</h2>
-
-        <div id="limited-products-container">
-          <!-- Generate content from products module -->
+      <!-- Special Products -->
+      <section class="special-products">
+        <div class="special-products__group">
+          <h2 class="special-products__title">Begrenset Opplag</h2>
+          <div class="special-products__container">
+            <!-- Generate content from products module -->
+          </div>
         </div>
 
-        <div id="chosen-products-container">
-          <!-- Generate content from products module -->
+        <div class="special-products__group">
+          <h2 class="special-products__title">Utvalgt Storfe</h2>
+          <div class="special-products__container">
+            <!-- Generate content from products module -->
+          </div>
         </div>
       </section>
 
