--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -22,19 +22,22 @@
     />
   </head>
   <body>
- <header id="header-banner">      
-    <h1 class="header-title">
+    <header id="header-banner">
+      <h1 class="header-title">
         <a href="index.html">Sloppy Meat</a>
-    </h1>
+      </h1>
 
-    <nav id="header-nav">
+      <nav id="header-nav">
         <ul class="navigation--list">
-            <li><a href="/html/shopping-cart.html">
-              <i class="fa-solid fa-cart-shopping fa-xl"></i></a></li>
-            <li><i class="fa-solid fa-magnifying-glass fa-xl"></i></li>
+          <li>
+            <a href="/html/shopping-cart.html">
+              <i class="fa-solid fa-cart-shopping fa-xl"></i
+            ></a>
+          </li>
+          <li><i class="fa-solid fa-magnifying-glass fa-xl"></i></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
     <main>
       <!-- Top Banners-->
