--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -22,17 +22,16 @@
     />
   </head>
   <body>
-    <header id="header-banner">
+    <header class="header-banner">
       <h1 class="header-title">
         <a href="index.html">Sloppy Meat</a>
       </h1>
 
-      <nav id="header-nav">
-        <ul class="navigation--list">
+      <nav class="header-nav">
+        <ul class="header-nav__list">
           <li>
             <a href="/html/shopping-cart.html">
-              <i class="fa-solid fa-cart-shopping fa-xl"></i
-            ></a>
+              <i class="fa-solid fa-cart-shopping fa-xl"></i></a>
           </li>
           <li><i class="fa-solid fa-magnifying-glass fa-xl"></i></li>
         </ul>
