added placeholder images for banner

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -42,9 +42,21 @@
     <main>
       <!-- Top Banners-->
       <section class="banner-section">
-        <img class="banner-section__banner" src="" alt="" />
-        <img class="banner-section__banner" src="" alt="" />
-        <img class="banner-section__banner" src="" alt="" />
+        <img
+          class="banner-section__banner"
+          src="../images/banner-test.png"
+          alt=""
+        />
+        <img
+          class="banner-section__banner"
+          src="../images/banner-test.png"
+          alt=""
+        />
+        <img
+          class="banner-section__banner"
+          src="../images/banner-test.png"
+          alt=""
+        />
       </section>
 
       <!-- Special Products -->
