--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -41,7 +41,7 @@
 
     <main>
       <!-- Top Banners-->
-      <section class="banner-section">
+      <section class="banner-section grid-12-column">
         <img
           class="banner-section__banner"
           src="../images/banner-test.png"
