--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -42,21 +42,16 @@
     <main>
       <!-- Top Banners-->
       <section class="banner-section grid-12-column">
-        <img
-          class="banner-section__banner"
-          src="../images/banner-test.png"
-          alt=""
-        />
-        <img
-          class="banner-section__banner"
-          src="../images/banner-test.png"
-          alt=""
-        />
-        <img
-          class="banner-section__banner"
-          src="../images/banner-test.png"
-          alt=""
-        />
+        <div class="banner-section__banner">
+          <img class="img-responsive" src="../images/banner-test.png" alt="" />
+        </div>
+        <div class="banner-section__banner">
+          <img class="img-responsive" src="../images/banner-test.png" alt="" />
+        </div>
+
+        <div class="banner-section__banner">
+          <img class="img-responsive" src="../images/banner-test.png" alt="" />
+        </div>
       </section>
 
       <!-- Special Products -->
