added some color, starting with articles

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -42,14 +42,14 @@
     <main>
       <!-- Top Banners-->
       <section class="banner-section grid-12-column">
-        <div class="banner-section__banner">
+        <div class="banner-section__banner md-3">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
-        <div class="banner-section__banner">
+        <div class="banner-section__banner md-6">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
 
-        <div class="banner-section__banner">
+        <div class="banner-section__banner md-3">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
       </section>
@@ -60,6 +60,26 @@
           <h2 class="special-products__title">Begrenset Opplag</h2>
           <div class="special-products__container">
             <!-- Generate content from products module -->
+            <!-- Testing box -->
+            <article class="product-card">
+              <img
+                src="../images/chipotle-pølse.jpg"
+                alt="Product Name"
+                class="product-card__image"
+              />
+
+              <h4 class="product-card__title">Product Name</h4>
+
+              <p class="product-card__weight">Weight: 500g</p>
+
+              <p class="product-card__price">Price: $5.00</p>
+
+              <p class="product-card__price-per-kg">Price per kg: $10.00</p>
+
+              <button class="product-card__add-to-cart" type="button">
+                Add to Cart
+              </button>
+            </article>
           </div>
         </div>
 
