--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -42,14 +42,14 @@
     <main>
       <!-- Top Banners-->
       <section class="banner-section grid-12-column">
-        <div class="banner-section__banner md-3">
+        <div class="banner-section__banner md-3 xs-hidden sm-hidden">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
-        <div class="banner-section__banner md-6">
+        <div class="banner-section__banner xs-12 sm-8 md-6">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
 
-        <div class="banner-section__banner md-3">
+        <div class="banner-section__banner md-3 sm-4 xs-hidden">
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
       </section>
@@ -65,7 +65,7 @@
               <img
                 src="../images/chipotle-pølse.jpg"
                 alt="Product Name"
-                class="product-card__image"
+                class="product-card__image img-responsive"
               />
 
               <h4 class="product-card__title">Product Name</h4>
