--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -46,7 +46,7 @@
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
         <div class="banner-section__banner xs-12 sm-8 md-6">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
+          <img class="img-responsive " src="../images/banner-test.png" alt="" />
         </div>
 
         <div class="banner-section__banner md-3 sm-4 xs-hidden">
@@ -55,7 +55,7 @@
       </section>
 
       <!-- Special Products -->
-      <section class="special-products">
+      <section class="special-products xs-hidden">
         <div class="special-products__group">
           <h2 class="special-products__title">Begrenset Opplag</h2>
           <div class="special-products__container">
