--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -20,16 +20,16 @@
       href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
+    <script defer src="/scripts/side1.js"></script>
   </head>
   <body>
     <header class="header-banner">
       <h1 class="header-title">
         <a href="index.html">Sloppy Meat</a>
       </h1>
-
       <nav class="header-nav">
         <ul class="header-nav__list">
-          <li><i class="fa-solid fa-magnifying-glass fa-xl"></i></li>
+          <li><i class="fa-solid fa-magnifying-glass fa-xl" id="searchToggle"></i></li>
           <li>
             <a href="/html/shopping-cart.html">
               <i class="fa-solid fa-cart-shopping fa-xl"></i
