--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/scripts/side1.js"></script>
+    <script type="module" src="/scripts/index.js"></script>
   </head>
   <body>
     <header class="header-banner">
@@ -53,6 +53,9 @@
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
       </section>
+
+      
+      <section class="products-section grid-12-column"></section>
 
       <!-- Special Products -->
       <section class="special-products xs-hidden">
@@ -93,13 +96,6 @@
 
       <section class="ad-section"></section>
 
-      <section class="products-section">
-        <h2>Alle Varer</h2>
-
-        <div class="products-container">
-          <!-- Generate content from products module -->
-        </div>
-      </section>
     </main>
 
     <footer>
