fixed path for index.js and removed placeholder image of hotdog

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="/scripts/index.js"></script>
+    <script type="module" src="../scripts/index.js"></script>
   </head>
   <body>
     <header class="header-banner">
@@ -29,7 +29,9 @@
       </h1>
       <nav class="header-nav">
         <ul class="header-nav__list">
-          <li><i class="fa-solid fa-magnifying-glass fa-xl" id="searchToggle"></i></li>
+          <li>
+            <i class="fa-solid fa-magnifying-glass fa-xl" id="searchToggle"></i>
+          </li>
           <li>
             <a href="/html/shopping-cart.html">
               <i class="fa-solid fa-cart-shopping fa-xl"></i
@@ -46,7 +48,7 @@
           <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
         <div class="banner-section__banner xs-12 sm-8 md-6">
-          <img class="img-responsive " src="../images/banner-test.png" alt="" />
+          <img class="img-responsive" src="../images/banner-test.png" alt="" />
         </div>
 
         <div class="banner-section__banner md-3 sm-4 xs-hidden">
@@ -54,7 +56,6 @@
         </div>
       </section>
 
-      
       <section class="products-section grid-12-column"></section>
 
       <!-- Special Products -->
@@ -63,26 +64,6 @@
           <h2 class="special-products__title">Begrenset Opplag</h2>
           <div class="special-products__container">
             <!-- Generate content from products module -->
-            <!-- Testing box -->
-            <article class="product-card">
-              <img
-                src="../images/chipotle-pølse.jpg"
-                alt="Product Name"
-                class="product-card__image img-responsive"
-              />
-
-              <h4 class="product-card__title">Product Name</h4>
-
-              <p class="product-card__weight">Weight: 500g</p>
-
-              <p class="product-card__price">Price: $5.00</p>
-
-              <p class="product-card__price-per-kg">Price per kg: $10.00</p>
-
-              <button class="product-card__add-to-cart" type="button">
-                Add to Cart
-              </button>
-            </article>
           </div>
         </div>
 
@@ -95,7 +76,6 @@
       </section>
 
       <section class="ad-section"></section>
-
     </main>
 
     <footer>
