--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -24,18 +24,22 @@
   </head>
   <body>
     <header class="header-banner">
-      <h1 class="header-title">
+      <h1 class="header-banner__title">
         <a href="index.html">Sloppy Meat</a>
       </h1>
-      <nav class="header-nav">
-        <ul class="header-nav__list">
-          <li>
-            <i class="fa-solid fa-magnifying-glass fa-xl" id="searchToggle"></i>
+      <nav class="header-banner__nav">
+        <ul class="header-banner__nav-list">
+          <li class="header-banner__nav-item">
+            <i
+              class="fa-solid fa-magnifying-glass fa-xl header-banner__search-toggle"
+            ></i>
           </li>
-          <li>
+          <li class="header-banner__nav-item">
             <a href="/html/shopping-cart.html">
-              <i class="fa-solid fa-cart-shopping fa-xl"></i
-            ></a>
+              <i
+                class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
+              ></i>
+            </a>
           </li>
         </ul>
       </nav>
