--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -82,44 +82,44 @@
       <section class="ad-section"></section>
     </main>
 
-    <footer>
-      <section class="website-info">
-        <h3>SloppyMeat.no</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Om SloppyMeat</li>
-          <li>Cookies</li>
-          <li>Personvernerklæring</li>
+    <footer class="footer">
+      <section class="footer__section footer__section--website">
+        <h3 class="footer__title">SloppyMeat.no</h3>
+        <hr class="footer__divider" />
+        <ul class="footer__list">
+          <li class="footer__list-item">Om SloppyMeat</li>
+          <li class="footer__list-item">Cookies</li>
+          <li class="footer__list-item">Personvernerklæring</li>
         </ul>
       </section>
 
-      <section class="contact-info">
-        <h3>Kontakt oss</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Finn butikk</li>
-          <li>Kontaktskjema</li>
-          <li>Kundeservice</li>
+      <section class="footer__section footer__section--contact">
+        <h3 class="footer__title">Kontakt oss</h3>
+        <hr class="footer__divider" />
+        <ul class="footer__list">
+          <li class="footer__list-item">Finn butikk</li>
+          <li class="footer__list-item">Kontaktskjema</li>
+          <li class="footer__list-item">Kundeservice</li>
         </ul>
       </section>
 
-      <section class="popular-info">
-        <h3>Populære temaer</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Oppskrifter</li>
-          <li>Matbloggen</li>
-          <li>Keto guide</li>
+      <section class="footer__section footer__section--popular">
+        <h3 class="footer__title">Populære temaer</h3>
+        <hr class="footer__divider" />
+        <ul class="footer__list">
+          <li class="footer__list-item">Oppskrifter</li>
+          <li class="footer__list-item">Matbloggen</li>
+          <li class="footer__list-item">Keto guide</li>
         </ul>
       </section>
 
-      <section class="follow-info">
-        <h3>Følg oss</h3>
-        <hr class="section-divider" />
-        <ul>
-          <li>Facebook</li>
-          <li>Twitter</li>
-          <li>Instagram</li>
+      <section class="footer__section footer__section--follow">
+        <h3 class="footer__title">Følg oss</h3>
+        <hr class="footer__divider" />
+        <ul class="footer__list">
+          <li class="footer__list-item">Facebook</li>
+          <li class="footer__list-item">Twitter</li>
+          <li class="footer__list-item">Instagram</li>
         </ul>
       </section>
     </footer>
