added search functionality. bug: search field can become unusable after a few uses. it doesnt happen when search functionality is NOT delegated to a module. must figure out how to prevent it while keeping it as module

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/search.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/search.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <script type="module" defer src="../scripts/index.js"></script>
+    <script type="module" src="../scripts/search.js"></script>
   </head>
   <body>
     <header class="header-banner">
@@ -51,40 +51,7 @@
     </header>
 
     <main>
-      <!-- Top Banners-->
-      <section class="banner-section grid-12-column">
-        <div class="banner-section__banner md-3 xs-hidden sm-hidden">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-        <div class="banner-section__banner xs-12 sm-8 md-6">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-
-        <div class="banner-section__banner md-3 sm-4 xs-hidden">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-      </section>
-
-      <section class="products-section grid-12-column"></section>
-
-      <!-- Special Products -->
-      <section class="special-products xs-hidden">
-        <div class="special-products__group">
-          <h2 class="special-products__title">Begrenset Opplag</h2>
-          <div class="special-products__container">
-            <!-- Generate content from products module -->
-          </div>
-        </div>
-
-        <div class="special-products__group">
-          <h2 class="special-products__title">Utvalgt Storfe</h2>
-          <div class="special-products__container">
-            <!-- Generate content from products module -->
-          </div>
-        </div>
-      </section>
-
-      <section class="ad-section"></section>
+      <section class="result-section grid-12-column"></section>
     </main>
 
     <footer class="footer">
