search button polish

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -29,12 +29,12 @@
       </h1>
       <nav class="header-banner__nav">
         <ul class="header-banner__nav-list">
+          <input
+            class="header-banner__search-field hidden"
+            type="text"
+            placeholder="Søk kjøtt..."
+          />
           <li class="header-banner__nav-item">
-            <input
-              class="header-banner__search-field hidden"
-              type="text"
-              placeholder="Search products..."
-            />
             <i
               class="fa-solid fa-magnifying-glass fa-xl header-banner__search-toggle"
             ></i>
