fixed button bugs i think

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -32,7 +32,7 @@
           <input
             class="header-banner__search-field hidden"
             type="text"
-            placeholder="Søk kjøtt..."
+            placeholder="Trykk enter for å søke..."
           />
           <li class="header-banner__nav-item">
             <i
