fixed bug on button!!

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="header-banner">
       <h1 class="header-banner__title">
-        <a href="index.html">Sloppy Meat</a>
+        <a href="../html/index.html">Sloppy Meat</a>
       </h1>
       <nav class="header-banner__nav">
         <ul class="header-banner__nav-list">
