added search button to cart aswell

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -40,7 +40,7 @@
             ></i>
           </li>
           <li class="header-banner__nav-item">
-            <a href="/html/shopping-cart.html">
+            <a href="../html/shopping-cart.html">
               <i
                 class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
               ></i>
