--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -25,22 +25,22 @@
   <body>
     <header class="header-banner">
       <h1 class="header-banner__title">
-        <a href="index.html">Sloppy Meat</a>
+        <a href="../html/index.html">Sloppy Meat</a>
       </h1>
       <nav class="header-banner__nav">
         <ul class="header-banner__nav-list">
+          <input
+            class="header-banner__search-field hidden"
+            type="text"
+            placeholder="Trykk enter for å søke..."
+          />
           <li class="header-banner__nav-item">
-            <input
-              class="header-banner__search-field hidden"
-              type="text"
-              placeholder="Search products..."
-            />
             <i
               class="fa-solid fa-magnifying-glass fa-xl header-banner__search-toggle"
             ></i>
           </li>
           <li class="header-banner__nav-item">
-            <a href="/html/shopping-cart.html">
+            <a href="../html/shopping-cart.html">
               <i
                 class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
               ></i>
@@ -50,42 +50,7 @@
       </nav>
     </header>
 
-    <main>
-      <!-- Top Banners-->
-      <section class="banner-section grid-12-column">
-        <div class="banner-section__banner md-3 xs-hidden sm-hidden">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-        <div class="banner-section__banner xs-12 sm-8 md-6">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-
-        <div class="banner-section__banner md-3 sm-4 xs-hidden">
-          <img class="img-responsive" src="../images/banner-test.png" alt="" />
-        </div>
-      </section>
-
-      <section class="products-section grid-12-column"></section>
-
-      <!-- Special Products -->
-      <section class="special-products xs-hidden">
-        <div class="special-products__group">
-          <h2 class="special-products__title">Begrenset Opplag</h2>
-          <div class="special-products__container">
-            <!-- Generate content from products module -->
-          </div>
-        </div>
-
-        <div class="special-products__group">
-          <h2 class="special-products__title">Utvalgt Storfe</h2>
-          <div class="special-products__container">
-            <!-- Generate content from products module -->
-          </div>
-        </div>
-      </section>
-
-      <section class="ad-section"></section>
-    </main>
+    <main></main>
 
     <footer class="footer">
       <section class="footer__section footer__section--website">
