--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="../scripts/index.js"></script>
+    <script type="module" src="../scripts/shopping-cart.js"></script>
   </head>
   <body>
     <header class="header-banner">
