--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -54,7 +54,11 @@
       <!-- Top Banners-->
       <section class="banner-section grid-12-column">
         <div class="banner-section__banner md-3 xs-hidden sm-hidden">
-          <img class="img-responsive" src="../images/kotelettbanner.jpg" alt="" />
+          <img
+            class="img-responsive"
+            src="../images/kotelettbanner.jpg"
+            alt=""
+          />
         </div>
         <div class="banner-section__banner xs-12 sm-8 md-6">
           <img class="img-responsive" src="../images/pølsebanner.jpg" alt="" />
