Basic shopping cart functionality

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -50,7 +50,9 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="cart-section grid-12-column"></section>
+    </main>
 
     <footer class="footer">
       <section class="footer__section footer__section--website">
