--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -51,7 +51,12 @@
     </header>
 
     <main>
-      <section class="cart-section grid-12-column"></section>
+      <div class="shopping-cart grid-12-column">
+        <section class="cart-section">
+          <h2 class="cart-section__title">Your Cart</h2>
+          <div class="cart-section__container"></div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
