Changes to cart-box stylings

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/streng-reset.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/shopping-cart.css">
 
     <!-- Importing Jaro font from Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -51,12 +52,9 @@
     </header>
 
     <main>
-      <div class="shopping-cart grid-12-column">
-        <section class="cart-section">
-          <h2 class="cart-section__title">Your Cart</h2>
-          <div class="cart-section__container"></div>
+      <h2 class="cart-section__title">Your Cart</h2>
+        <section class="cart-section  cart-section__container grid-12-column">
         </section>
-      </div>
     </main>
 
     <footer class="footer">
