--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -55,6 +55,7 @@
       <h2 class="cart-section__title">Your Cart</h2>
         <section class="cart-section  cart-section__container grid-12-column">
         </section>
+        <section class="cart-section__pricesummary grid-12-column"></section>
     </main>
 
     <footer class="footer">
