Added counter to shopping cart on main page

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -40,12 +40,11 @@
             ></i>
           </li>
           <li class="header-banner__nav-item">
-            <a href="../html/shopping-cart.html">
-              <i
-                class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
-              ></i>
-            </a>
-          </li>
+  <a href="../html/shopping-cart.html">
+    <i class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"></i>
+    <span class="cart-badge" id="cartCount">0</span>
+  </a>
+</li>
         </ul>
       </nav>
     </header>
