removed ID, set class for cartBagde instead

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -42,7 +42,7 @@
           <li class="header-banner__nav-item">
   <a href="../html/shopping-cart.html">
     <i class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"></i>
-    <span class="cart-badge" id="cartCount">0</span>
+    <span class="cart-badge cartCount">0</span>
   </a>
 </li>
         </ul>
