--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -27,6 +27,7 @@
       <h1 class="header-banner__title">
         <a href="../html/index.html">Sloppy Meat</a>
       </h1>
+
       <nav class="header-banner__nav">
         <ul class="header-banner__nav-list">
           <input
@@ -40,11 +41,13 @@
             ></i>
           </li>
           <li class="header-banner__nav-item">
-  <a href="../html/shopping-cart.html">
-    <i class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"></i>
-    <span class="cart-badge cartCount">0</span>
-  </a>
-</li>
+            <a href="../html/shopping-cart.html">
+              <i
+                class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
+              ></i>
+              <span class="cart-badge cartCount">0</span>
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
