--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/search.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/search.html
@@ -44,6 +44,7 @@
               <i
                 class="fa-solid fa-cart-shopping fa-xl header-banner__cart-icon"
               ></i>
+              <span class="cart-badge cartCount">0</span>
             </a>
           </li>
         </ul>
