--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/streng-reset.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/shopping-cart.css">
+    <link rel="stylesheet" href="../css/shopping-cart.css" />
 
     <!-- Importing Jaro font from Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,10 +52,11 @@
     </header>
 
     <main>
-      <h2 class="cart-section__title">Your Cart</h2>
-        <section class="cart-section  cart-section__container grid-12-column">
-        </section>
-        <section class="cart-section__pricesummary grid-12-column"></section>
+      <h2 class="cart-section__title">Din Handlekurv</h2>
+      <section
+        class="cart-section cart-section__container grid-12-column"
+      ></section>
+      <section class="cart-section__pricesummary grid-12-column"></section>
     </main>
 
     <footer class="footer">
