index frontend stuff

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -71,27 +71,49 @@
         </div>
       </section>
 
-      <!-- All Products-->
-      <section class="products-section grid-12-column"></section>
-
       <!-- Special Products -->
-      <section class="special-products xs-hidden">
+      <section class="special-products grid-12-column xs-hidden">
         <div class="special-products__group">
           <h2 class="special-products__title">Begrenset Opplag</h2>
-          <div class="special-products__container">
+          <div
+            class="special-products__container special-products__container-limited grid-12-column"
+          >
             <!-- Generate content from products module -->
           </div>
         </div>
 
         <div class="special-products__group">
           <h2 class="special-products__title">Utvalgt Storfe</h2>
-          <div class="special-products__container">
+          <div
+            class="special-products__container special-products__container-selected grid-12-column"
+          >
             <!-- Generate content from products module -->
           </div>
         </div>
       </section>
 
-      <section class="ad-section"></section>
+      <section class="grid-12-column ad-section">
+        <img
+          class="ad-section__ad img-responsive md-6"
+          src="../images/ad-food.jpg"
+          alt=""
+        />
+        <img
+          class="ad-section__ad img-responsive md-6"
+          src="../images/ad-pepsi.jpg"
+          alt=""
+        />
+      </section>
+
+      <!-- All Products-->
+      <section class="products-section">
+        <div class="all-products__group">
+          <h2 class="all-products__title">Alle varer</h2>
+          <div class="all-products__container grid-12-column">
+            <!-- Generate content from products module -->
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
