--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/shopping-cart.html
@@ -54,10 +54,13 @@
 
     <main>
       <h2 class="cart-section__title">Din Handlekurv</h2>
+
       <section
         class="cart-section cart-section__container grid-12-column"
       ></section>
+
       <section class="cart-section__pricesummary grid-12-column"></section>
+        <button class="cart-section__btn--empty-cart">Tøm Handlekurv</button>
     </main>
 
     <footer class="footer">
