styling index polish

--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -92,15 +92,21 @@
         </div>
       </section>
 
+      <!-- Ads -->
       <section class="grid-12-column ad-section">
         <img
-          class="ad-section__ad img-responsive md-6"
+          class="ad-section__ad img-responsive md-4"
           src="../images/ad-food.jpg"
           alt=""
         />
         <img
-          class="ad-section__ad img-responsive md-6"
+          class="ad-section__ad img-responsive md-4"
           src="../images/ad-pepsi.jpg"
+          alt=""
+        />
+        <img
+          class="ad-section__ad img-responsive md-4"
+          src="../images/ad-food.jpg"
           alt=""
         />
       </section>
