--- a/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/html/index.html
@@ -72,7 +72,7 @@
       </section>
 
       <!-- Special Products -->
-      <section class="special-products grid-12-column xs-hidden">
+      <section class="special-products grid-12-column xs-hidden sm-hidden ">
         <div class="special-products__group">
           <h2 class="special-products__title">Begrenset Opplag</h2>
           <div
@@ -93,7 +93,7 @@
       </section>
 
       <!-- Ads -->
-      <section class="grid-12-column ad-section">
+      <section class="grid-12-column ad-section xs-hidden sm-hidden ">
         <img
           class="ad-section__ad img-responsive md-4"
           src="../images/ad-food.jpg"
